--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.3.5",
     "tailwindcss-fluid-type": "^2.0.3"
