--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.17",
+    "gsap": "^3.12.5",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.3.5",
