--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "autoprefixer": "^10.4.19",
     "gsap": "^3.12.5",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "scramble-text": "^0.0.9",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.3.5",
     "tailwindcss-fluid-type": "^2.0.3"
   },
   "devDependencies": {
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.12.2",
     "tailwindcss-fluid-spacing": "^0.4.0"
   }
